# Gittest

src/app/: CMakeLists.txt  image.qrc  package.xml
src/app/include/app/: loginwidget.h
src/app/src/: loginwidget.cpp  loginwidget.h  loginwidget.ui  main.cpp  qrviz.cpp  qrviz.hpp
